3-operators/rhacs/instance/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-sandbox
    argocd.argoproj.io/sync-wave: "2"
  name: central
  namespace: acs-instance
spec:
  host: central-acs-instance.apps.rosa-ltlw2.7utd.p1.openshiftapps.com
  to:
    kind: Service
    name: central
    weight: 100
  port:
    targetPort: https
  tls:
    termination: edge
  wildcardPolicy: None
